# example-rocket

./: .gitignore  Cargo.toml  Makefile  Rocket.toml
src/: cache.rs  catchers.rs  forms.rs  main.rs  views.rs  views_main.rs
templates/: 404.html.tera  base.html.tera  form.html.tera  index.html.tera
templates/include/: navbar.html.tera
