[package]
name = "rocket-rust"
version = "0.1.0"
authors = ["fox0 <>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket]
version = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "serve", "helmet"]
